Added pages based on the trading book

--- a/TAPython/Data Download and DB Insert.ipynb
+++ b/TAPython/Data Download and DB Insert.ipynb
@@ -23,7 +23,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_list_sp500():\n",
@@ -92,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_daily_data(ticker):\n",
@@ -114,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def insert_daily_data_into_db(\n",
